[workspace]
members = [
    "node-hub/dora-rerun",
    "node-hub/hik-camera"
]

[workspace.package]
version = "0.1.0"
description = "立志做最可爱的 RoboMaster 开源框架!"
authors = ["LiuliFox <liulifox@qq.com>"]
documentation = "https://project-nanako.github.io/Nanako-docs/"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/project-nanako/nanako"

[workspace.dependencies]
dora-rs = "0.1.0"
dora-node-api = "0.3.8"
pyo3 = { version = "0.23.4", features = [
    "eyre",
    "abi3-py37",
    "multiple-pymethods",
] }
